# Markdown-Use-Case-Manager

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: persistence_benchmarks.rs
docs/: README.md
docs/guides/: actor-management.md  best-practices.md  cli-reference.md  common-workflows.md  configuration.md  getting-started.md  integration.md  scenario-management.md  testing.md
docs/methodologies/: business.md  simple.md  template-comparisons.md  testing.md
docs/personas/: test-persona.md
docs/reference/: cli-reference.md  template-system.md  troubleshooting.md
markdown/: UC-TEST-001.md
personas/: admin-persona.toml  minimal-persona.toml  test-persona.toml
source-templates/: actor.hbs  config.toml  persona.hbs  use_case_detailed.hbs
source-templates/languages/javascript/: info.toml
source-templates/languages/python/: info.toml
source-templates/languages/rust/: info.toml
source-templates/methodologies/business/: config.toml  info.toml  methodology.toml  uc_advanced.hbs  uc_detailed.hbs  uc_normal.hbs  uc_simple.hbs
source-templates/methodologies/developer/: config.toml  info.toml  methodology.toml  uc_advanced.hbs  uc_detailed.hbs  uc_normal.hbs  uc_simple.hbs
source-templates/methodologies/feature/: config.toml  info.toml  methodology.toml  overview.hbs  uc_advanced.hbs  uc_detailed.hbs  uc_normal.hbs  uc_simple.hbs
source-templates/methodologies/tester/: config.toml  info.toml  methodology.toml  overview.hbs  persona.hbs  uc_advanced.hbs  uc_detailed.hbs  uc_normal.hbs  uc_simple.hbs
source-templates/scenarios/: scenario.hbs
src/: lib.rs  main.rs
src/cli/: args.rs  mod.rs  runner.rs
src/cli/commands/: create.rs  init.rs  language.rs  list.rs  methodology.rs  mod.rs  persona.rs  project.rs  scenario.rs  status.rs  usecase.rs
src/cli/interactive/: field_helpers.rs  initialization.rs  menu.rs  mod.rs  runner.rs  selectors.rs  session.rs  settings.rs  tests.rs  ui.rs  workflows.rs
src/cli/standard/: mod.rs  runner.rs
src/config/: file_manager.rs  language.rs  methodology.rs  mod.rs  template_manager.rs  types.rs
src/controller/: actor_controller.rs  config_controller.rs  dto.rs  mod.rs  persona_controller.rs  project_controller.rs  scenario_controller.rs  tests.rs  use_case_controller.rs
src/core/: manager.rs  mod.rs  use_case_coordinator.rs
src/core/application/: methodology_field_collector.rs  mod.rs  use_case_application_service.rs  use_case_coordinator.rs
src/core/domain/: mod.rs
src/core/infrastructure/: mod.rs
src/core/languages/: definitions.rs  mod.rs
src/core/models/: metadata.rs  mod.rs  scenario.rs  scenario_types.rs  status.rs  use_case.rs
src/core/processors/: methodology_manager.rs  methodology_processor.rs  mod.rs  mod_old.rs  processor_registry.rs  template_driven.rs  unified_processor.rs  unified_registry.rs
src/core/services/: file_service.rs  mod.rs  use_case_service.rs
src/core/template_engine/: mod.rs
src/core/templates/: mod.rs
src/core/utils/: fuzzy_match.rs  mod.rs  string_utils.rs
src/presentation/: mod.rs
src/presentation/formatters/: display_result_formatter.rs  mod.rs  status_formatter.rs  use_case_formatter.rs
templates/: overview.hbs  rust_test.hbs  use_case.hbs  use_case_detailed.hbs  use_case_simple.hbs
templates/languages/javascript/: test.hbs
templates/languages/python/: test.hbs
templates/languages/rust/: test.hbs
templates/methodologies/business/: uc_detailed.hbs  uc_normal.hbs  use_case_detailed.hbs
templates/methodologies/developer/: overview.hbs  persona.hbs  (+1 more)
templates/python/: test.hbs
templates/rust/: test.hbs
tests/: edit_use_case_integration_test.rs  integration_tests.rs  methodology_fields_integration_test.rs  modular_language_tests.rs  persistence_unified_tests.rs  persona_management_integration_test.rs  scenario_references_integration_test.rs  test_utils.rs  unit_tests.rs
tests/integration/: cli_auto_init_test.rs  cli_comprehensive_test.rs  cli_modular_test.rs  code_preservation_test.rs  error_handling_test.rs  filesystem_comprehensive_test.rs  init_enforcement_test.rs  mod.rs  regenerate_test.rs  template_language_tests.rs  template_management_test.rs  test_helpers.rs
tests/unit/: README.md  cli_auto_init_test.rs  cli_interactive_test.rs  cli_methodology_test.rs  cli_runner_test.rs  config_test.rs  coordinator_methodology_test.rs  metadata_test.rs  mod.rs  modular_language_test.rs  priority_test.rs  processor_integration_test.rs  scenario_test.rs  status_test.rs  template_engine_test.rs  use_case_service_test.rs  use_case_test.rs
(+152 files in other folders)
