[package]
name = "markdown-use-case-manager"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Coigniez <coigniez@gmail.com>"]
license = "MIT"
description = "A lightweight CLI tool for managing use cases and scenarios in markdown format, designed to keep your documentation close to your code"
homepage = "https://github.com/GuillaumeCOI/markdown-use-case-manager"
repository = "https://github.com/GuillaumeCOI/markdown-use-case-manager"
documentation = "https://github.com/GuillaumeCOI/markdown-use-case-manager/docs"
readme = "README.md"
keywords = ["markdown", "use-case", "documentation", "cli", "git"]
categories = ["command-line-utilities", "development-tools", "template-engine"]

[dependencies]
# CLI and argument parsing
clap = { version = "4.0", features = ["derive", "color"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Templating
handlebars = "4.0"

# File system and I/O
walkdir = "2.0"
directories = "5.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regular expressions
regex = "1.0"

# Terminal UI
console = "0.15"
colored = "2.0"
inquire = "0.7"
crossterm = "0.27"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"

[[bin]]
name = "mucm"
path = "src/main.rs"

# Internal testing interface - NOT FOR PUBLIC USE
[lib]
name = "markdown_use_case_manager"
path = "src/lib.rs"
