[package]
name = "markdown-use-case-manager"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Coigniez <120651399+Guillaumecoi@users.noreply.github.com>"]
license = "MIT"
description = "A lightweight CLI tool for managing use cases in markdown format, designed to keep your documentation close to your code."
homepage = "https://github.com/GuillaumeCOI/markdown-use-case-manager"
repository = "https://github.com/GuillaumeCOI/markdown-use-case-manager"
documentation = "https://github.com/GuillaumeCOI/markdown-use-case-manager/docs"
readme = "README.md"
keywords = ["markdown", "use-case", "documentation", "cli", "git"]
categories = ["command-line-utilities", "development-tools", "template-engine"]

[[bin]]
name = "mucm"
path = "src/main.rs"

[lib]
name = "markdown_use_case_manager"
path = "src/lib.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.5", features = ["derive", "color"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Templating
handlebars = "5.0"

# File system and I/O
walkdir = "2.5"
directories = "5.0"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regular expressions
regex = "1.10"

# SQLite database
rusqlite = { version = "0.32", features = ["bundled"] }

# Terminal UI
console = "0.15"
colored = "2.1"
inquire = "0.7"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "3.2"
criterion = { version = "0.5", features = ["html_reports"] }
